# essential_pandas

./: manipulacao_dados.py  manipulacao_de_dados_codigo_base.ipynb  pyproject.toml
